; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_moduleUnregisterFilters.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_moduleUnregisterFilters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@moduleCommandFilters = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @moduleUnregisterFilters(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  store i32 0, i32* %5, align 4
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @listRewind(i32 %10, i32* %3)
  br label %12

12:                                               ; preds = %30, %1
  %13 = call %struct.TYPE_7__* @listNext(i32* %3)
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %4, align 8
  %14 = icmp ne %struct.TYPE_7__* %13, null
  br i1 %14, label %15, label %33

15:                                               ; preds = %12
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %6, align 8
  %19 = load i32, i32* @moduleCommandFilters, align 4
  %20 = load i32*, i32** %6, align 8
  %21 = call %struct.TYPE_7__* @listSearchKey(i32 %19, i32* %20)
  store %struct.TYPE_7__* %21, %struct.TYPE_7__** %7, align 8
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %23 = icmp ne %struct.TYPE_7__* %22, null
  br i1 %23, label %24, label %30

24:                                               ; preds = %15
  %25 = load i32, i32* @moduleCommandFilters, align 4
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %27 = call i32 @listDelNode(i32 %25, %struct.TYPE_7__* %26)
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %24, %15
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @zfree(i32* %31)
  br label %12

33:                                               ; preds = %12
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @listRewind(i32, i32*) #1

declare dso_local %struct.TYPE_7__* @listNext(i32*) #1

declare dso_local %struct.TYPE_7__* @listSearchKey(i32, i32*) #1

declare dso_local i32 @listDelNode(i32, %struct.TYPE_7__*) #1

declare dso_local i32 @zfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
